---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/generic_substitution.test
input_file: compiler/eight-tests/tests/type-inference/generic_substitution.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn id<T>(x: T) -> T;
    fn many_id<T>(x: T) -> T;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn id<$1@0>(x: T) -> $1@0 {
      return (x as $1@0);
    }
    fn many_id<$1@0>(x: T) -> $1@0 {
      return ((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>(((id as fn(($1@30))->$1@30)::<>((x as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30)) as $1@30);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
